# internship_meduzzen_backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
app/: celery.py  logging_config.py  main.py
app/core/: config.py  exception_handlers.py  exceptions.py  hashing.py  tasks.py  verify_token.py
app/db/: database.py  postgres_db.py  redis_client.py  redis_db.py
app/migrations/: env.py
app/migrations/versions/: 096125d6081e_initial_migration.py  11e75acafdc9_initial_migration.py  1be33ed62fd9_initial_migration.py  1cd98f7b64c6_initial_migration.py  2f23a213ea80_initial_migration.py  3e450a25d374_initial_migration.py  495cadcb83d9_initial_migration.py  5211080cf78e_initial_migration.py  547c7dd88932_initial_migration.py  5ed47447871b_initial_migration.py  61110bca6443_initial_migration.py  657bf3624b2d_allow_null_values_for_firstname_and_.py  7b827e1b7ab2_initial_migration.py  7fcad8c62ba0_initial_migration.py  7ff2dcbde2a5_initial_migration.py  822fb6bef323_initial_migration.py  8fe497322f90_initial_migration.py  9823b51f860c_initial_migration.py  9f7d91098cdb_initial_migration.py  a1daf4374fde_initial_migration.py  (+14 more)
app/models/: __init__.py  answer.py  company.py  company_invitation.py  company_member.py  company_request.py  models.py  notification.py  question.py  quiz.py  quiz_result.py  user.py  users.py
app/repositories/: answer.py  company.py  company_invitation.py  company_member.py  company_request.py  notification.py  question.py  quiz.py  quiz_result.py  user.py  users.py
app/routers/: analytics.py  answer.py  auth.py  company.py  company_invitation.py  company_member.py  company_request.py  dependencies.py  healthcheck.py  me.py  question.py  quiz.py  quiz_result.py  user.py  users.py
app/schemas/: analytics.py  answer.py  auth.py  company.py  company_invitation.py  company_member.py  company_request.py  notification.py  question.py  quiz.py  quiz_result.py  schemas.py  token.py  user.py  users.py
app/services/: answer.py  auth.py  company.py  company_invitation.py  company_member.py  company_request.py  jwt.py  notification.py  question.py  quiz.py  quiz_result.py  user.py  users.py
app/tests/: conftest.py  main_test.py  test_answer.py  test_auth.py  test_celery.py  test_company.py  test_company_invitation.py  test_company_members.py  test_company_requests.py  test_company_service.py  test_jwt.py  test_notification.py  test_postgres.py  test_question.py  test_quiz.py  test_quiz_result.py  test_redis.py  test_user.py  test_user_endpoints.py  test_users_service.py
app/utils/: config.py  pagination.py  parse_excel.py  repository.py  unitofwork.py
