[tool.poetry]
name = "internship-meduzzen-backend"
version = "0.1.0"
description = ""
authors = ["Admin <verukacolt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.100.0"
uvicorn = "0.22.0"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
asyncio-redis = "^0.16.0"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
alembic = "^1.13.2"
pytest-asyncio = "^0.23.7"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
httpx = "0.24.1"
pytest = "7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
