[tool.poetry]
name = "internship-meduzzen-backend"
version = "0.1.0"
description = ""
authors = ["Admin <verukacolt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.100.0"
uvicorn = "0.22.0"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
asyncio-redis = "^0.16.0"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
email-validator = "^2.2.0"
bcrypt = "^4.1.3"
httpx = "^0.27.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
cryptography = "^42.0.8"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.0.7"
flower = "^2.0.1"
nest-asyncio = "^1.6.0"
faker = "^26.0.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^7.0"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.10.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503, E501"
